templates/benthos_template.yaml
---
# Source: benthos/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:  
  name: benthos-release-name
  labels:
    app: benthos
    chart: benthos-0.0.6
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: benthos
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - ports:      
      - port: 4195
        protocol: TCP
---
# Source: benthos/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: benthos-release-name
  labels:
    app: benthos
    chart: benthos-0.0.6
    release: release-name
    heritage: Helm
spec:
  selector:    
    matchLabels:
      app: benthos
      release: release-name
  replicas: 1
  template:
    metadata:
      labels:        
        app: benthos
        release: release-name
        routed_via: release-name
      annotations:        
        checksum/secrets: df13764db4249a0d72ecab4b186d2dac936d977fb112f6f9847c83da3e54a8a4
        prometheus.io/scrape: "true"
        checksum/config: edd9999b1b95012500468b17fedb3a6049b83784491390d5cf417386cfde0b79
    spec:
      containers:
        - name: benthos-release-name
          image: "docker-registry.wikimedia.org/benthos:latest"
          imagePullPolicy: IfNotPresent          
          ports:
            - containerPort: 4195
          livenessProbe:
            httpGet:
              path: /ping
              port: 4195
          readinessProbe:
            httpGet:
              path: /ready
              port: 4195
          env: []
                    
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 1
              memory: 400Mi
          volumeMounts:
            - name: benthos-release-name-benthos-config
              mountPath: /etc/benthos
              readOnly: true
      volumes:
        - name: benthos-release-name-benthos-config
          configMap:
            name: benthos-release-name-benthos-config
---
# Source: benthos/templates/secret.yaml
# Empty file to keep the base.meta template happy
